--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.22.3",
     "react-select": "^5.10.0",
     "react-swipeable": "^7.0.2",
+    "react-window": "^1.8.11",
     "recharts": "^2.12.2",
     "vite": "^6.2.5",
     "xlsx": "^0.18.5",
@@ -40,6 +41,7 @@
     "@types/node": "^22.13.11",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.18",
     "directory-tree": "^3.5.2",
