--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.10.0",
     "react-swipeable": "^7.0.2",
